--- a/class 6/style.css
+++ b/class 6/style.css
@@ -1,7 +1,20 @@
-p{
+/* p{
 
 background-color: aqua;
 color: blue;
 text-shadow: 1px 1px 5px black;
 
-}
+} */
+
+/* 
+p::first-letter{
+
+font-size: 28px
+
+} */
+
+/* p::first-line{
+
+background-color: blanchedalmond;
+
+} */
