--- a/class 6/style.css
+++ b/class 6/style.css
@@ -17,4 +17,16 @@ font-size: 28px
 
 background-color: blanchedalmond;
 
+} */ 
+
+/* a:link{
+
+color: blueviolet;
+
+}
+
+a:visited{
+
+color: brown;
+
 } */
