--- a/class 6/style.css
+++ b/class 6/style.css
@@ -30,3 +30,30 @@ a:visited{
 color: brown;
 
 } */
+
+/* input:hover{
+
+
+    background-color: burlywood;
+} */
+
+/* input:focus{
+
+background-color: chartreuse;
+
+} */
+
+/* button:active{
+
+background-color: chocolate;
+
+} */
+
+
+.main{
+
+border: 1px solid blue;
+width: 300px;
+height: 200px;
+
+}
