--- a/class 6/style.css
+++ b/class 6/style.css
@@ -50,10 +50,15 @@ background-color: chocolate;
 } */
 
 
+img{
+    width: 100%;
+}
+
 .main{
 
 border: 1px solid blue;
-width: 300px;
-height: 200px;
-
+/* width: 300px; */
+/* height: 200px; */
+min-width: 100px;
+max-width: 1000px;
 }
