--- a/class 6/style.css
+++ b/class 6/style.css
@@ -54,11 +54,22 @@ img{
     width: 100%;
 }
 
+/* .main{ */
+
+/* border: 1px solid blue; */
+/* width: 300px; */
+/* height: 200px; */
+/* min-width: 100px;
+max-width: 1000px;
+} */
+
+
 .main{
 
 border: 1px solid blue;
-/* width: 300px; */
-/* height: 200px; */
-min-width: 100px;
-max-width: 1000px;
+width: 300px;
+max-height: 300px;
+min-height: 200px;
+overflow: scroll
+
 }
