--- a/class 7/style.css
+++ b/class 7/style.css
@@ -22,7 +22,7 @@ tr:hover{
 
 
 
-form{
+/* form{
 width: 100px;
 margin:0 auto;
 
@@ -47,6 +47,6 @@ button{
     margin:0em 5em;
 
     
-}
+} */
 
 
