--- a/class 7/style.css
+++ b/class 7/style.css
@@ -49,4 +49,39 @@ button{
     
 } */
 
+body{
+    background-color: darkorange;
+}
+
+.black{
+
+background-color: black;
+border: 1px solid black;
+height: 100px;
+width: 100px;
+display: inline-block;
+margin: 2px 10px 2px 10px;
+
+}
+
+
+.white{
+
+    background-color: white;
+    border: 1px solid black;
+    height: 100px;
+    width: 100px;
+    display: inline-block;
+    margin: 2px 10px 2px 10px;
+    }
+
+    img{
+
+position: relative;
+right: 200px;
+
+    }
+    
+
+    
 
