--- a/class 7/style.css
+++ b/class 7/style.css
@@ -75,13 +75,21 @@ margin: 2px 10px 2px 10px;
     margin: 2px 10px 2px 10px;
     }
 
-    img{
+    /* img{
 
 position: relative;
 right: 200px;
 
-    }
+    } */
     
+    img{
+
+  position: fixed;      
+ top:10px;
+ right: 309x;
+ opacity: 0.1;
+
+    }
 
     
 
