--- a/pra/style.css
+++ b/pra/style.css
@@ -1,6 +1,17 @@
-h1{
+/* h1{
 
 font-family: Arial, Helvetica, sans-serif;
 font-size: 50px;
+text-transform: uppercase;
+text-decoration: overline;
+line-height: 20em;
+
+} */
+
+p{
+
+letter-spacing: 1px;
+width: 400px;
+margin: 0 auto;
 
 }
