--- a/pra/style.css
+++ b/pra/style.css
@@ -46,6 +46,12 @@ background-color: cadetblue;
 p{
 
 border: 1px solid black;
+/* width: 400px;
+height: 400px; */
+/* min-width: 200px;
+max-width: 800px; */
+min-height: 100px;
+max-height: 400px;
 
 }
 
