--- a/pra/style.css
+++ b/pra/style.css
@@ -43,23 +43,35 @@ background-color: cadetblue;
 
 } */
 
-p{
+/* p{
 
-border: 1px solid black;
+border: 1px solid black; */
 /* width: 400px;
 height: 400px; */
 /* min-width: 200px;
 max-width: 800px; */
-min-height: 100px;
+/* min-height: 100px;
 max-height: 400px;
+overflow: scroll;
+
+} */
+
+p{
+border: 1px solid black;
+margin:0px 0px 10px 50px;
+padding: 10px;
+
 
 }
 
-
-/* #box{
+#box{
 
     border: 1px solid black;
-    height: 200px;
-    width: 100px;
+    height: 100px;
+    width: 200px;
+    margin: 0 auto;
+    
+    
+    background-color: cyan;
 
-} */
+}
