--- a/class 7/style.css
+++ b/class 7/style.css
@@ -49,11 +49,11 @@ button{
     
 } */
 
-body{
+/* body{
     background-color: darkorange;
-}
+} */
 
-.black{
+/* .black{
 
 background-color: black;
 border: 1px solid black;
@@ -62,10 +62,10 @@ width: 100px;
 display: inline-block;
 margin: 2px 10px 2px 10px;
 
-}
+} */
 
 
-.white{
+/* .white{
 
     background-color: white;
     border: 1px solid black;
@@ -73,7 +73,7 @@ margin: 2px 10px 2px 10px;
     width: 100px;
     display: inline-block;
     margin: 2px 10px 2px 10px;
-    }
+    } */
 
     /* img{
 
@@ -82,14 +82,44 @@ right: 200px;
 
     } */
     
-    img{
+    /* img{
 
   position: fixed;      
  top:10px;
  right: 309x;
  opacity: 0.1;
 
+    } */
+
+    *{
+
+font-family: sans-serif;
+
     }
 
-    
+table{
 
+width: 500px;
+margin: 0 auto;
+border-spacing: 10px;
+empty-cells: hide;
+
+}
+
+th,td{
+font-size: 10px;
+padding: 10px;
+border: 1px solid black;
+}
+
+tr.even{
+
+background-color: blueviolet;
+
+}
+
+tr:hover{
+
+background-color: chocolate;
+
+}
