--- a/class 7/style.css
+++ b/class 7/style.css
@@ -176,7 +176,7 @@ z-index: 1;
     } */
 
 
-    .fir{
+    /* .fir{
 
 background-color: blue;
 width: 400px;
@@ -198,4 +198,4 @@ p{
 
 clear: both;
 
-}
+} */
