--- a/class 7/style.css
+++ b/class 7/style.css
@@ -199,7 +199,7 @@ p{
 clear: both;
 
 } */
-body{
+/* body{
 background-color: cornflowerblue;
 
 }
@@ -210,4 +210,9 @@ background-color:red
 
 }
 
-}
+} */
+
+
+/* ul{
+    list-style: circle;
+} */
