--- a/class 7/style.css
+++ b/class 7/style.css
@@ -216,3 +216,19 @@ background-color:red
 /* ul{
     list-style: circle;
 } */
+
+
+th,td{
+
+    border:2px solid black;
+    /* border-spacing: 5px; */
+}
+table{
+
+    border:1px solid black;
+}
+
+table.one{
+
+    border-collapse: collapse;
+}
