--- a/class 7/style.css
+++ b/class 7/style.css
@@ -237,3 +237,15 @@ table.one{
 /* a{
 cursor: pointer;
 } */
+
+/* *{
+background-color: darkblue;
+
+} */
+
+/* .black{
+
+background-color: brown;
+
+} */
+
