--- a/class 7/style1.css
+++ b/class 7/style1.css
@@ -29,11 +29,11 @@
     
 } */
 
-
+/* 
 .ph1{
 
 background-color: royalblue;
-width: 300px;
+width: 940px;
 float: left;
 
 }
@@ -49,4 +49,34 @@ float: left;
 
 clear: both;
 
-    }
+    } */
+
+    /* body{
+  background-color: slateblue;
+
+    } */
+
+    /* @media only screen and (max-width:600px){
+img{
+width: 400px;
+
+}
+
+    } */
+
+.main{
+
+display: flex;
+flex-direction: row;
+justify-content: space-around;
+
+}
+
+   .one,.two,.three{
+border: 1px solid steelblue;
+/* width: 250px; */
+   } 
+
+   .one{
+       flex:2
+   }
